# dlukes.github.io

./: .gitignore  .gitmodules  Makefile  Pipfile  README.md  TODO.md  archives.html  beyond-semver.html  categories.html  cathedral-and-bazaar.html  configuring-emacs-daemon-on-mac-os-x.html  emacs-daemon-osx.html  fill-par-in-airmail.html  flask-wsgi-url-prefix.html  how-to-mount-a-flask-app-under-a-url-prefix-or-really-any-wsgi-app.html  index.html  index2.html  jupyter-magic.html  kontext-interface-tweak-update.html  kontext-interface-tweak.html  monkey-patching-in-r.html  pelicanconf.py  publishconf.py  pyproject.toml  python-crash-course.html  requirements.txt  responsive-iframe.html  search.html  tags.html  text-munching-in-r.html  tipuesearch_content.json  unicode.html
author/: dlukes.html  dlukes2.html
category/: floss.html  ling.html  macos.html  os-x-tips.html
feeds/: all.atom.xml  dlukes.atom.xml  dlukes.rss.xml  floss.atom.xml  ling.atom.xml  macos.atom.xml  os-x-tips.atom.xml
output/: beyond-semver.html  configuring-emacs-daemon-on-mac-os-x.html  fill-par-in-airmail.html  kontext-interface-tweak-update.html  kontext-interface-tweak.html  unicode.html
pages/: about.html  work.html
static/: custom.css
tag/: airmail.html  automator.html  bonito.html  charset.html  chomsky.html  daemon.html  dependency.html  development.html  dokuwiki.html  emacs.html  emacsclient.html  encoding.html  fill.html  flask.html  floss.html  gui.html  hack.html  html.html  iframe.html  javascript.html  jupyter.html  konkordance.html  kontext.html  korpus.html  library.html  (+22 more)
(+32 files in other folders)
