[tool.poetry]
name = "dlukes.github.io"
version = "0.0.0"
description = "Little Umbrellas"
authors = ["David Lukes <dafydd.lukes@gmail.com>"]
license = "CC-BY-NC-4.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pelican = "^3.7.1"
markdown = "^2.6.9"
ipython = "^6.2.1"
beautifulsoup4 = "^4.6.0"
pelican-alias = "^1.1"
nbconvert = "^5.3.1"
ghp-import = "^0.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
